terraform/main.tf
data "aws_ami" "latest_ubuntu" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "image-id"
    values = ["ami-007855ac798b5175e"]
  }
}

module "aws_vpc" {
  source          = "terraform-aws-modules/vpc/aws"
  version         = "3.19.0"
  name            = var.vpc_name
  cidr            = var.vpc_cidr_block
  private_subnets = var.private_subnet_cidr_blocks
  public_subnets  = var.public_subnet_cidr_blocks
  azs             = var.vpc_azs

  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  tags = {
    "kubernetes.io/cluster/testapp-eks-cluster" = "shared"
  }

  public_subnet_tags = {
    "kubernetes.io/cluster/testapp-eks-cluster" = "shared"
    "kubernetes.io/role/elb"                    = 1
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/testapp-eks-cluster" = "shared"
    "kubernetes.io/role/internal-elb"           = 1
  }
}

resource "aws_instance" "app_server" {
  ami                         = data.aws_ami.latest_ubuntu.id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.jenkins-SG.id]
  subnet_id                   = module.aws_vpc.public_subnets[0]
  user_data                   = file("app-server-script.sh")

  tags = {
    Name = var.instance_name
  }
}
resource "aws_security_group" "jenkins-SG" {
  name        = "jenkins-security-group"
  description = "Jenkins security group"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
